2012-05-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-msg-mail): Ensure that gnus-newsgroup-name is
	a string so that Gcc works (bug#11514).

2012-04-21  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus.el (debbugs-gnu): Don't override existing autoload definition.

2012-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-inews-insert-gcc): Don't do the alist stuff when we
	don't have a current group.

2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-inews-insert-gcc): Protect against when we don't
	have a group name.

	* gnus-art.el (article-wash-html): Ensure that we insert the HTML into
	a multibyte buffer (bug#7410).
	(article-wash-html): Parse the original article buffer to get the
	unencoded data (bug#7410).

	* gnus-start.el (gnus-read-newsrc-el-file): Protect against broken
	.newsrc.el files.

2012-03-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* auth-source.el (auth-source-netrc-create): Quote tokens that contain
	"#" to avoid having them interpreted as comments.

2012-03-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): Update the text state properly to avoid
	inserting spurious paragraph starts.

2012-03-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-update-marks): Don't propagate marks unless
	requested (bug#10961).

	* shr.el (shr-table-widths): Divide the extra width more fairly over
	the TDs (bug#10973).
	(shr-render-td): Don't delete too much padding.
	(shr-natural-width): Compute the natural width more correctly.
	(shr-insert): Allow the natural width to be computed for tables again.
	(shr-tag-table-1): Rework how the natural widths are computed by
	rendering the table a third time.
	(shr-natural-width): Removed.
	(shr-buffer-width): New function.
	(shr-expand-newlines): Use it.

	* gnus-msg.el (gnus-bug): Don't delete the other windows.  We may be
	using a `gnus-use-full-window' setup (bug#11013).
